@@ -69,7 +69,7 @@ public:
   void set_upcall_thread (void);
 
   /// Is there any thread running as a leader?
-  int leader_available (void) const;
+  bool leader_available (void) const;
 
   /// A server thread is making a request.
   void set_client_thread (void);
@@ -108,7 +108,7 @@ public:
   void set_client_leader_thread (ACE_thread_t thread_ID);
 
   /// Checks if we are a leader thread
-  int is_client_leader_thread (void) const;
+  bool is_client_leader_thread (void) const;
 
   /**
    * A leader thread is relinquishing its role, unless there are more
@@ -157,9 +157,9 @@ public:
 
   /// Checks if there are any followers available
   /**
-   * @return 1 if there follower set is not empty
+   * @return true if there follower set is not empty
    */
-  int follower_available (void) const;
+  bool follower_available (void) const;
 
   //@}
 
@@ -176,7 +176,7 @@ public:
   ACE_Reverse_Lock<TAO_SYNCH_MUTEX> &reverse_lock (void);
 
   /// Check if there are any client threads running
-  int has_clients (void) const;
+  bool has_clients (void) const;
 
   /// Accesor to the reactor
   ACE_Reactor *reactor (void);
