@@ -1,3 +1,12 @@
+Tue Apr 26 09:42:36 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/Leader_Follower.h:
+        * tao/Leader_Follower.inl:
+          Use bool instead of int for several methods
+
+        * tao/Thread_Lane_Resources.cpp:
+          Simplied some code
+
 Tue Apr 26 09:26:48 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/tao_orb_tests.lst:
